<resources>
    <string name="app_name">Water Logged</string>
    <string name="amount_left_for_today">Amount Left for Today:</string>
    <string name="amount_drunk_today">Amount Drunk Today:</string>
    <string name="amount_added_due_to_heat">Amount Added Due to Heat (76°):</string>
    <string name="add">ADD</string>
    <string name="add_amount">Add Amount:</string>
    <string name="_500ml">500</string>
    <string name="_1000ml">Loading...</string>
    <string name="sign_out">Sign Out</string>
    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="settings">Settings</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core functionality.</string>
    <!-- Notification Strings -->
    <string name="notify">Notify</string>
    <string name="reminder_title">Have you had water Today?</string>
    <string name="reminder_text">Check WaterLogged to see your progress today!</string>
    <string name="channel_name">Primary</string>
    <string name="channel_description">primary_channel</string>
</resources>